# Things3-MCP

./: .envrc  .gitignore  .pre-commit-config.yaml  .safety-project.ini  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  configure_token.py  pyproject.toml  pytest.ini  run_tests.py  smithery.yaml  test_todo.md  things_fast_server.py  things_server.py  todo.txt
.claude/: settings.local.json
.cursor/rules/: idempotent_tests.mdc  packaging-releases.md  using-applescript-in-things.mdc
.github/workflows/: README.md  lint.yml  publish-trusted.yml  publish.yml
docs/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  RELEASE_NOTES.md  THINGS_MCP_RELIABILITY_IMPROVEMENTS.md
src/things3_mcp/: __init__.py  applescript_bridge.py  fast_server.py  formatters.py  logging_config.py
src/things_mcp/: __init__.py  applescript_bridge.py  cache.py  config.py  date_converter.py  fast_server.py  formatters.py  handlers.py  logging_config.py  mcp_tools.py  simple_server.py  simple_url_scheme.py  tag_handler.py  url_scheme.py  utils.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_completion_operations.py  test_deadline_operations.py  test_error_handling_and_logging.py  test_integration.py  test_list_assignment_operations.py  test_list_operations.py  test_scheduling_operations.py  test_task_operations.py
